Fixed spacing in hero section

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,5 +4,5 @@
 @tailwind utilities;
 
 .section {
-    height: 90vh;
+    height: 100vh;
 }
